--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PR'
 - !lcsh 'Jews -- Drama'
+- GITenberg
 title: The Melting-Pot
 url: http://www.gutenberg.org/ebooks/23893
